@@ -252,6 +252,11 @@
           invoked, the behavior is as if the first line of the macro file was
           "COMMENT &lt;macro name&gt;". The AUTO_COMMENT option has a default
           value of 'Yes'.</para>
+
+          <para>The setting of the AUTOMAKE option is ignored if the
+          <command>start</command> or <command>restart</command> command
+          includes a directory name (e.g.,<command> shorewall restart
+          /etc/shorewall.new</command>).</para>
         </listitem>
       </varlistentry>
 
