@@ -217,6 +217,11 @@
           skipped and the compiled script that executed the last
           <command>start</command> or <command>restart</command> command is
           used. The default is AUTOMAKE=No.</para>
+
+          <para>The setting of the AUTOMAKE option is ignored if the
+          <command>start</command> or <command>restart</command> command
+          includes a directory name (e.g.,<command> shorewall6 restart
+          /etc/shorewall.new</command>).</para>
         </listitem>
       </varlistentry>
 
