@@ -105,6 +105,10 @@ None.
     script used during the last 'start' or 'restart' is used to
     start/restart the firewall.
 
+    Note that if a <directory> is specified in the start/restart
+    command (e.g., "shorewall restart /etc/shorewall.new") then the
+    setting of AUTOMAKE is ignored.
+
     Note that the 'make' utility must be installed on the firewall
     system in order for AUTOMAKE=Yes to work correctly.
 
